Fixed a broken DIV that was causing the borders to collapse on mobile. Also made all cards a little bit more padded.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -480,7 +480,7 @@ span.inactive {
     border: none;
     background: #fff;
     margin: 8px 0 16px 0;
-    padding: 16px;
+    padding: 20px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     position: relative;
 }
@@ -493,7 +493,7 @@ span.inactive {
 
 
 .card-footer {
-    margin: 0 -16px -16px -16px;
+    margin: 0 -20px -20px -20px;
     background: $offwhite;
 }
 
